# TQuick2

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
controls/: TMask.qml  TPagination.qml  TSVGIcon.qml
qml/: TAvatar.qml  TAwesomeIcon.qml  TBadge.qml  TBusyIndicator.qml  TButton.qml  TCarousel.qml  TCarouselElement.qml  TCheckBox.qml  TDialog.qml  TDialogBasic.qml  TDialogButton.qml  TDividerLine.qml  TFlickable.qml  TFpsMonitor.qml  TIcon.qml  TIconButton.qml  TImage.qml  TImageButton.qml  TInputField.qml  TLabel.qml  TMask.qml  TMouseArea.qml  TNavigationBar.qml  TNavigationElement.qml  TPagination.qml  TPopover.qml  TPopoverElement.qml  TPopoverMenu.qml  TPopup.qml  TProgressBar.qml  TRadioBox.qml  TRadioBoxGroup.qml  TRectangle.qml  TSVGIcon.qml  TScrollbarH.qml  TScrollbarV.qml  TSwitch.qml  TTag.qml  TToast.qml
src/: TQuick.qrc  tquick.cpp  tquick.h  tquickglobal.cpp  tquickglobal.h  tquickinfo.h.in  tquickloader.cpp  tquickloader.h  tquickqmlplugin.cpp  tquickqmlplugin.h  tquickworld.cpp  tquickworld.h
src/controls/gadget/: tcolor.cpp  tcolor.h  tgadgetbackground.cpp  tgadgetbackground.h  tgadgetborder.cpp  tgadgetborder.h  tgadgeticon.cpp  tgadgeticon.h  tgadgetitem.cpp  tgadgetitem.h  tgadgetlabel.cpp  tgadgetlabel.h  tgadgetscrollbar.cpp  tgadgetscrollbar.h
src/controls/interface/: tdialogitem.cpp  tdialogitem.h  ttoastitem.cpp  ttoastitem.h
src/theme/: tthemebinder.cpp  tthemebinder.h  tthemeconstant.h  tthemefileparser.h  tthemehandler.cpp  tthemehandler.h  tthemejsonfileparser.cpp  tthemejsonfileparser.h  tthememanager.cpp  tthememanager.h
